<resources>
    <string name="app_name">Barbara</string>
    <string name="base_api_url">http://barbara-crackerjack.rhcloud.com/api/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_user_details">User Details</string>
    <string name="title_activity_transaction_details">Transaction Details</string>
    <string name="title_activity_user_preferences">User Preferences</string>
    <string name="title_activity_user_chat">Chat</string>

    <string name="label_username">Username</string>
    <string name="label_password">Password</string>

    <string name="label_login_action">Login</string>
    <string name="label_users">Users</string>
    <string name="label_transactions">MyTransactions</string>
    <string name="label_credit_transactions">Credit Transactions</string>
    <string name="label_about">About</string>
    <string name="label_chat">Chat</string>
    <string name="label_investments">Investments</string>
    <string name="label_preferences">My Preferences</string>

    <string name="label_not_available">NA</string>

    <string name="label_full_name">Full Name</string>
    <string name="label_speaker_profile">Speaker Profile</string>
    <string name="label_currency_type">Currency Type</string>
    <string name="label_wallet_amount">Wallet </string>
    <string name="label_credit_amount">Credit </string>
    <string name="label_from_user">From</string>
    <string name="label_to_user">To</string>

    <string name="label_description">Description</string>
    <string name="label_amount">Amount </string>
    <string name="label_transaction_date">Transferred On </string>
    <string name="label_transaction_on">On </string>
    <string name="label_type">Type </string>
    <string name="label_send">Send</string>
    <string name="content_send_button">send button</string>

    <string name="label_nick_name">Nick Name</string>
    <string name="label_budget">Budget</string>
    <string name="label_security_question">Security Question</string>
    <string name="label_edit_preferences">Edit Preferences</string>

    <string name="label_about_app">About App</string>
    <string name="label_about_developer">About Developer</string>
    <string name="text_about_developer">Tech enthusiast. Love to code. Interested in all super-duper coding languages. Java crazy.
        Interested in working on top notch technologies and solving real world problems.
    </string>
    <string name="text_about_app">A voice enabled mobile application that eases your banking experience.
       The app provides you a personal assistant with intelligence enough to perform your day to day banking operations.
        This app requires no text passwords. Works purely on your voice and speaker recognition provided by microsoft.
    </string>
    <string name="label_preference">Preference</string>
    <string name="label_next">Next</string>
    <string name="label_previous">Previous</string>
    <string name="label_finish">Finish</string>
    <string name="label_developer_email">rajagopal.a.dinesh.28@gmail.com</string>

</resources>
