<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_users"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/label_users" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/label_transactions" />
        <item
            android:id="@+id/nav_credit_transactions"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/label_credit_transactions" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/label_chat" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/label_preferences" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/label_about" />
        <item
            android:id="@+id/nav_investments"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/label_investments" />
    </group>

</menu>
