<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.app.dextrous.barbara.activity.UserPreferencesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_preference"
            android:id="@+id/preferenceQuestionLabel"
            android:layout_marginTop="93dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/speakButton" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newPreferenceValueText"
            android:layout_below="@+id/preferenceQuestionLabel"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/speakButton"
            android:inputType="text" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speakButton"
            android:src="@android:drawable/ic_btn_speak_now"
            android:layout_alignBottom="@+id/newPreferenceValueText"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/content_send_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_previous"
            android:id="@+id/previousButton"
            android:layout_below="@+id/newPreferenceValueText"
            android:layout_alignParentStart="true"
            android:layout_marginTop="57dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_next"
            android:id="@+id/nextButton"
            android:layout_alignTop="@+id/previousButton"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
