<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="6dip"
        android:contentDescription="@string/label_not_available"
        android:src="@drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/amountLabel"
        android:layout_width="50dip"
        android:layout_height="26dip"
        android:ellipsize="marquee"
        android:textColor="@color/colorAccent"
        android:singleLine="true"
        android:text="@string/label_amount"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/descriptionLabel" />

    <TextView
        android:id="@+id/amountValueLabel"
        android:layout_width="120dip"
        android:layout_height="26dip"
        android:ellipsize="marquee"
        android:textColor="@color/colorAccent"
        android:singleLine="true"
        android:text="@string/label_not_available"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/descriptionLabel"
        android:layout_toStartOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/typeValueLabel"
        android:layout_width="120dip"
        android:layout_height="26dip"
        android:ellipsize="marquee"
        android:textColor="@color/colorAccent"
        android:singleLine="true"
        android:text="@string/label_not_available"
        android:textSize="12sp"
        android:layout_below="@+id/descriptionLabel"
        android:layout_alignEnd="@+id/descriptionLabel" />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="30dip"
        android:layout_height="26dip"
        android:ellipsize="marquee"
        android:textColor="@color/colorAccent"
        android:singleLine="true"
        android:text="@string/label_type"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/typeValueLabel" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_above="@id/amountLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/colorAccent"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/icon"
        android:gravity="center_vertical"
        android:text="@string/label_not_available"
        android:textSize="16sp" />

</RelativeLayout>